--- a/sass/global.scss
+++ b/sass/global.scss
@@ -2,19 +2,19 @@ body {
   padding-top: 50px;
 }
 
-.container {
-  padding: 0;
-}
+// .container {
+//   padding: 0;
+// }
 
-.row {
-  margin-right: 0;
-  margin-left: 0;
-}
+// .row {
+//   margin-right: 0;
+//   margin-left: 0;
+// }
 
-.col,
-[class*="col-"] {
-  padding: 0;
-}
+// .col,
+// [class*="col-"] {
+//   padding: 0;
+// }
 
 header {
   margin-bottom: $margin;
